public/stylesheets/style.css
html, body{
    margin:0;
    padding:0;
    min-height: 100%;
    min-width: 100%;
    position: absolute;
}

.page {
    height:100%;
    width: 100%;
    position:absolute;
    background :url(/img/bg.png) repeat #111
}

#peers {
    height:100%;
}

#local-video-container {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    position: absolute;
    display: relative;
    overflow: hidden;
   /* background: rgba(255, 255, 255, 1); */
    bottom: 10px;
    right: 10px;
}

#localVideo {
    width:  300px;
    height: 225px;
    margin-left: -50px;
    margin-top: -12.5px;
}

#menu-bar{
    position:fixed;
    background: rgba(255, 255, 255, 0.25);
    bottom:0px;
    height : 50px;
    width  : 100%;
}
#buttons-container{
    position : relative;
    width: calc(100%/3);
    min-width:160px;
    height: inherit;
    margin: 0 auto;
}
.img-b {
    width : 100%;
    height : 100%;
}

.remotePeerInfo {
    height: 80%;
    position: absolute;
    top: 0 ;
    left: 0;
    color: #ffffff;
}

.inline-div {
    display: inline-block;
}
.icon {
    position: relative;
    height: 50px;
    float: left;
    width: calc(100% / 3);
}
.icon-img {
    height : 40px;
    margin : 5px auto;
    display : block;
    cursor: pointer;
}
.video-icon {
    position: absolute;
    top:0;
    bottom:0;
    right: 0;
    left: 0;
    width: 45px;
    height: 30px;
    margin: 10px auto;
    display : block;

}

.red-bar {}

.remote-media-container {
    width: 0;
    height: 0;
    position: relative;
    display: inline-block;
}

.remote-media-video {
  position: relative;
  min-height: 99%;
  max-height: 99%;
  width: 95%;
  left: 2.5%;
  margin: 0 auto;
}


.video-icon-big {
    width: 64px;
    margin: 10px auto;
}
#bar-activator {
    background-color: red;
    width:100%;
    height: 10px;
}
.center{
    position: absolute;
    background: rgba(255, 255, 255, 0.25);
    border-radius:25px;
    height: 200px;
    width: 200px;
    top:calc(50% - 200px/2 - 50px);
    left:calc(50% - 200px/2);
}
.hidden {
    display: none;
}
.big-icon{
    position: absolute;
    width: 200px;
    height: 150px;
}
.big-icon-text {
    position: relative;
    top: 150px;
    width: 200px;
    height: 50px;
    margin: 0 auto;
    color: #fff;
    font: 18px 'Lato', Arial, Helvetica, sans-serif;
    font-size: large;
    font-weight: 400;
    line-height: 26px;
    text-align: center;
    -webkit-font-smoothing: antialiased;
}

.big-icon-video {
    position: relative;
    width: 64px;
    height: 48px;
    margin: 0 auto;
    display: block;
    top:calc(50% - 48px/2);
}

.big-icon-audio {
    position: relative;
    margin: 0 auto;
    display: block;
    top:calc(50% - 48px/2);
}
.big-red-bar-icon {
    position: relative;
    top:46px;
    width: 64px;
    height: 54px;
    margin: 0 auto;
    display: block;
}

